<resources>
    <string name="app_name">Ecalcharge_mercedez_android</string>
    <string name="find_soc">Check Battery SOC</string>
    <string name="charge_immediately">Charge Immediately</string>
    <string name="smart_charging">Smart Charging</string>
    <string name="scheduled_charging">Scheduled Charging</string>
    <string name="time_estimated"></string>
    <string name="turn_on">Turn On</string>
    <string name="your_soc">SOC: </string>
    <string name="your_charging_started_immediately">Your charging started immediately</string>
    <string name="start_time">Enter start time</string>
    <string name="end_time">Enter end time</string>
    <string name="turn_off">Turn Off</string>
    <string name="car_owner">Car Owner</string>
    <string name="fleet_manager">Fleet Manager</string>
    <string name="your_fleet_status">Your fleet status:</string>
    <string name="car1">"Car1: "</string>
    <string name="car2">"Car2: "</string>
    <string name="car3">"Car3: "</string>
    <string name="departure_time">"Departure Time"</string>
    <string name="fleetStatus">"Get Your Fleet Status</string>
    <string name="charging_options">Charging Options:</string>
    <string name="charging_status">Charging Status:</string>
    <string name="charging">Charging</string>
    <string name="disconnected">Disconnected</string>
    <string name="end_time1">End Time:</string>
    <string name="start_time1">Start Time:</string>
    <string name="submit">Submit</string>
    <string name="submit2">Submit</string>
</resources>
